<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Initiation.LoginActivity">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/girlpower"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="42dp"
        android:alpha="0.5"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLogin"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/actor"
        android:paddingLeft="@dimen/margin2"
        android:text="@string/tv_w"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:fontFamily="@font/actor"
        android:paddingLeft="@dimen/margin2"
        android:text="@string/tv_b"
        android:textColor="@color/white"
        android:textSize="42sp" />

    <!--Añadir imagenes al lado del EditText-->

    <LinearLayout
        android:id="@+id/llUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="310dp">


        <TextView
            android:id="@+id/tvUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_user"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/etUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llUser"
        android:padding="@dimen/margin"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_pass"
            android:textColor="@color/black"/>


        <EditText
            android:id="@+id/etPss"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUser"
            android:layout_centerInParent="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPass"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_fpass"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"/>


    <LinearLayout
        android:id="@+id/llSignIn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/llPass"
        android:layout_marginTop="30dp"
        android:padding="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">


        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tv_signin"
            android:textColor="@color/black"
            android:textAlignment="textStart"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/btnSignIn"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_weight="2"
            android:src="@drawable/btnnext"
            android:background="@color/white"
            android:onClick="login"/>

    </LinearLayout>



</RelativeLayout>