<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNav.ProfileActivity">


    <RelativeLayout
        android:id="@+id/rlProfile"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/purple_200"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin2"
                android:src="@drawable/profilecircule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/profile_name"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cdProfile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/rlProfile">


        <LinearLayout
            android:id="@+id/llButtonArrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tvDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnArrow"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow"
                android:layout_weight="1"
                android:onClick="datos"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDatos"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/tv_email"
                    android:paddingLeft="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_telefono" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/tv_tlf"
                    android:paddingLeft="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/tv_pss"
                    android:paddingLeft="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_chat_2" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/tv_comments"
                    android:paddingLeft="25dp" />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cdProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:onClick="actualizar"
        android:text="@string/btn_actu" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_navigation" />


</RelativeLayout>